fix: :pencil2: fix typo

--- a/notebooks/Hybrid_RP3Beta_SLIMElasticNet_HT.ipynb
+++ b/notebooks/Hybrid_RP3Beta_SLIMElasticNet_HT.ipynb
@@ -122,14 +122,13 @@
     "SLIMERecommender = SLIMElasticNetRecommender(URM_train)\n",
     "\n",
     "# Train the RP3betaRecommender recommender with the best hyper tuned values\n",
-    "\n",
     "RP3betaRecommender.fit(\n",
     "    topK= 81, alpha= 0.7446283980562399, beta= 0.3485498934203173, implicit= True, min_rating= 1\n",
     ")\n",
     "\n",
     "\n",
     "\n",
-    "# Train the P3alphaRecommender model with the best hyper tuned values\n",
+    "# Train the SLIM ElasticNet model with the best hyper tuned values\n",
     "SLIMERecommender.fit(\n",
     "    topK= 2781, l1_ratio= 0.03797690559694552, alpha= 0.0014753426395604076\n",
     ")"
